-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.15.4
-
None
-
8
-
0c2125458a9fdddaf3385b257ba4350da872a1d1 (qt/qtbase/dev) 8eda2c4c57e1f30e49a99d38ff1865397b5749e8 (qt/qtbase/6.2)
-
Qt6_Foundation_Sprint 34, Qt6_Foundation_Sprint 35, Qt6_Foundation_Sprint 37, Qt6_Foundation_Sprint 38
Selecting some items and then marking them as unselectable results in a situation where nothing is selected, yet hasSelection() returns true.
To reproduce, just run unit tests in
https://codereview.qt-project.org/c/qt/qtbase/+/345534/9
- depends on
-
QTBUG-94546 QTreeModel::index changes model despite being const
-
- Open
-
- is required for
-
QTBUG-93301 QItemSelectionModel does not emit selectionChanged when selection is changed through QStandardItem::setFlags
-
- In Progress
-
| For Gerrit Dashboard: QTBUG-93829 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 352425,14 | Consistent handling of disabled items in QItemSelectionModel | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 360200,3 | Consistent handling of disabled items in QItemSelectionModel | 6.2 | qt/qtbase | Status: MERGED | +2 | 0 |